2005-08-02  Hynek Hanke  <hanke@chopin>

	* src/audio/alsa.c (alsa_play): At the end of playback, set avail_min to the whole buffer and
	wait until poll() returns, meaning the buffer is free.
	(alsa_play): Call snd_pcm_set_swparams() addiotionally.

	* src/audio/spd_audio.h (AudioID): New member sw_params for alsa.

2005-08-01  Hynek Hanke  <hanke@chopin>

	* src/audio/alsa.c: New debugging messages.

2005-08-01  Hynek Hanke  <hanke@chopin>
	
	* src/audio/spd_audio.h: New parameters moved here, including alsa_device_name (taken from pars[0]).

	* src/audio/alsa.c (wait_for_poll): SND_PCM_STATE_XRUN and SND_PCM_STATE suspend are now checked here.
	(alsa_play): Open and close the device before and after each playing.
	(alsa_open): Ensure it's possible to open ALSA, but close it after that.
	(alsa_set_volume): Mention in the comment that ALSA *can't* set individual tracks volume.

2005-07-27  Hynek Hanke  <hanke@brailcom.org>

	* src/audio/alsa.c (alsa_play): Typo.

	* src/c/api/libspeechd.{c.h}: Declarations of internal functions moved to libspeechd.c so that
	gcc doesn't complain about redeclarations of static functions as non-static.

	* src/audio/alsa.c (alsa_play): Handle XRUN state when preparing to play.

2005-07-23  Hynek Hanke  <hanke@brailcom.org>

	* src/audio/alsa.c (alsa_play): Initialize hw_params each time
	before setting parameters.
 
2005-07-10  Hynek Hanke  <hanke@brailcom.org>

	* src/audio/alsa.c (ERR): New macro. Use it, when appropriate.
	(_alsa_open): Output device name too when impossible to open.
	No mutexes now necessary.
	(_alsa_open): Create a pipe for communication of stop requests to
	the other thread.
	(_alsa_close): Close the pipe.
	Improved logging.
	(wait_for_poll): New function.
	(ERROR_EXIT): New macro. Used instead of ``goto error_exit''.
	(alsa_play): The while loop modified for the new mechanism (see comments).

2005-07-04  Hynek Hanke  <hanke@brailcom.org>

	* src/server/config.c (cb_EndClient): Assign NULL to cl_spec_section.
